# panicmonitr

./: .gitignore  README.md  history.db-shm  history.db-wal  install.sh  main.py  panic-monitor.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: __about__.py  engine.py  history.py  log.py  logstore.py  schema.py  service_install.py  stats.py  trust.py  tui.py  webapp.py
src/alpn/: __init__.py  framing.py  heartbeat.py  logs.py  push.py  shell.py  status.py  sync.py
src/templates/: panic-monitor.service.tmpl
tests/: test_shell.py
